Update 5. Cloud-Native Application Patterns.md

--- a/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
+++ b/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
@@ -4,7 +4,7 @@ Since the application pattern catalog is quite vast, to further filter within th
 
 Design to scale out | Design for self-healing | Design for Operations
 ------------ | ------------- | -------------
-Build stateless applications|Retry On Failure|Capture all relevant Performance 
+[Build stateless applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.1%09PATTERN:%20BUILD%20STATELESS%20APPLICATIONS.md)|Retry On Failure|Capture all relevant Performance 
 Use API gateway for front-end channels|Design For Idempotency|Metrics
 Leverage Functions as a service|Protect Using Bulkhead|Visualize Distributed Tracing
 Containerize applications|Implement Circuit breaker|Visualize Dependency graph
