Update 5. Cloud-Native Application Patterns.md

--- a/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
+++ b/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
@@ -4,11 +4,11 @@ Since the application pattern catalog is quite vast, to further filter within th
 
 Design to scale out | Design for self-healing | Design for Operations
 ------------ | ------------- | -------------
-[Build stateless applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.1%09PATTERN:%20BUILD%20STATELESS%20APPLICATIONS.md)|Retry On Failure|Capture all relevant Performance 
-Use API gateway for front-end channels|Design For Idempotency|Metrics
-Leverage Functions as a service|Protect Using Bulkhead|Visualize Distributed Tracing
-Containerize applications|Implement Circuit breaker|Visualize Dependency graph
-Outsource Security of Micro services|Add Throttling Capabilitiy|
-Externalize configuration||
-Cache at all levels||
+[Build stateless applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.1%09PATTERN:%20BUILD%20STATELESS%20APPLICATIONS.md)|[Retry On Failure]|[Capture all relevant Performance Metrics] 
+[Use API gateway for front-end channels]|[Design For Idempotency]|[Visualize Distributed Tracing]
+[Leverage Functions as a service]|[Protect Using Bulkhead|Visualize Dependency graph]
+[Containerize applications]|[Implement Circuit breaker]|
+[Outsource Security of Micro services]|[Add Throttling Capabilitiy]|
+[Externalize configuration]||
+[Cache at all levels]||
 		
