Update 5.1	PATTERN: BUILD STATELESS APPLICATIONS.md

--- a/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
@@ -1,6 +1,7 @@
-**Rationale:** Stickiness typically caused by session affinity limits the application's ability to scale out.
+### Rationale:
+Stickiness typically caused by session affinity limits the application's ability to scale out.
 
-**Solution:** 
+### Solution:
 User traffic (even within a session) should always be distributed across instances. This requires services should be designed to avoid session stickiness. Typically this is caused when applications store session state in memory. Make sure that any instance can handle any request.
 
 **Some historical perspective:**
