Update 5.1	PATTERN: BUILD STATELESS APPLICATIONS.md

--- a/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
@@ -1,3 +1,5 @@
+## PATTERN: BUILD STATELESS APPLICATIONS
+
 ### Rationale:
 Stickiness typically caused by session affinity limits the application's ability to scale out.
 
