Update 5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md

--- a/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
+++ b/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
@@ -12,8 +12,8 @@ Use Api Gateway as the security intermediary between consumers and micro service
 
 *	**Native cloud offerings** such as AWS Cognito or Azure Active Directory B2C – While these are not full-featured Identity management systems, the key advantage of using these offerings are its native integration within the vendor ecosystem. For e.g. Cognito as a native authorizer for Api gateway authentication, Allowing only authenticated users to write to DynamoDB table etc. It can also be configured to use social logins or other security platform as 3rd party IdP service
 for authentication. In addition to the fast speed of implementation, the native solution is cheaper as compared to dedicated offerings. Downside is feature set is limited in that they do not provide a self-service application portal
-*	**Dedicated IdPaas providers such as Okta, Ping, Auth0 – In addition to customer identity, they also provide complete set of enterprise features such as SSO for employees and partners and securing on-prem, cloud infrastructure and APis. These solutions are costly but appropriate for managing security for portals across different technology stack and authentication protocols.
-*	**Hybrid solution – Since the native offerings provide OAuth2 and Open Id Connect protocol as a standard interface, it is possible to use federated identity solution such as such as Okta or Auth0 acting as the IdP. In this setup, Cognito will act as the interface to the applications and delegate the user authentication and management to the IdP.
+*	**Dedicated IdPaas providers** such as Okta, Ping, Auth0 – In addition to customer identity, they also provide complete set of enterprise features such as SSO for employees and partners and securing on-prem, cloud infrastructure and APis. These solutions are costly but appropriate for managing security for portals across different technology stack and authentication protocols.
+*	**Hybrid solution** – Since the native offerings provide OAuth2 and Open Id Connect protocol as a standard interface, it is possible to use federated identity solution such as such as Okta or Auth0 acting as the IdP. In this setup, Cognito will act as the interface to the applications and delegate the user authentication and management to the IdP.
 
 **Service-to-service security** – Share user context securely and authenticate and authorize requests between services within the cluster.
 
