Update and rename 5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER,md to 5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md

--- a/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
+++ b/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
@@ -1,13 +1,13 @@
 ### 4.2.4	PATTERN: IMPLEMENT CIRCUIT BREAKER ###
 
-## Rationale
+## Rationale ##
 In a distributed environment, calls to remote resources and services can fail due to transient faults, such as slow network connections, timeouts, or the resources being overcommitted or temporarily unavailable. These faults typically correct themselves after a short period of time, and a robust cloud application should be prepared to handle them by using a strategy such as the Retry pattern.
 
 However, there can also be situations where faults are due to unanticipated events, and that might take much longer to fix. These faults can range in severity from a partial loss of connectivity to the complete failure of a service. In these situations it might be pointless for an application to continually retry an operation that is unlikely to succeed, and instead the application should quickly accept that the operation has failed and handle this failure accordingly.
 
 Additionally, if a service is very busy, failure in one part of the system might lead to cascading failures.
 
-## Solution
+## Solution ##
 A service client should invoke a remote service via a proxy that functions in a similar fashion to an electrical circuit breaker. When the number of consecutive failures crosses a threshold, the circuit breaker trips, and for the duration of a timeout period all attempts to invoke the remote service will fail immediately. After the timeout expires the circuit breaker allows a limited number of test requests to pass through. If those requests succeed the circuit breaker resumes normal operation. Otherwise, if there is a failure the timeout period begins again. There are 2 kinds of implementations based deployment type:
 
 Use application frameworks such as Netflix Hystrix for implementing the circuit breaking pattern
