--- a/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
+++ b/Building-Modern-Cloud-Native-Apps/5. Cloud-Native Application Patterns.md
@@ -4,11 +4,11 @@ Since the application pattern catalog is quite vast, to further filter within th
 
 Design to scale out | Design for self-healing | Design for Operations
 ------------ | ------------- | -------------
-[Build stateless applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.1%09PATTERN:%20BUILD%20STATELESS%20APPLICATIONS.md)|[Retry On Failure]()|[Capture all relevant Performance Metrics]() 
-[Use API gateway for front-end channels]()|[Design For Idempotency]()|[Visualize Distributed Tracing]()
-[Leverage Functions as a service]()|[Protect Using Bulkhead]()|[Visualize Dependency graph]()
-[Containerize applications]()|[Implement Circuit breaker]()|
-[Outsource Security of Micro services]()|[Add Throttling Capabilitiy]()|
-[Externalize configuration]()||
-[Cache at all levels]()||
+[Build stateless applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.1%09PATTERN:%20BUILD%20STATELESS%20APPLICATIONS.md)|[Retry On Failure](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.8%20PATTERN:%20RETRY%20ON%20FAILURE.md)|[Capture all relevant Performance Metrics](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.13%20PATTERN:%20CAPTURE%20ALL%20RELEVANT%20PERFORMANCE%20METRICS.md) 
+[Use API gateway for front-end channels](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.2%20PATTERN:%20USE%20API%20GATEWAY%20FOR%20FRONT-END%20CHANNELS.md)|[Design For Idempotency](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.9%20PATTERN:%20DESIGN%20FOR%20IDEMPOTENCY.md)|[Visualize Distributed Tracing](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.14%20PATTERN:%20VISUALIZE%20DISTRIBUTED%20TRACING.md)
+[Leverage Functions as a service](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.3%20PATTERN:%20LEVERAGE%20FUNCTION%20AS%20A%20SERVICE.md)|[Protect Using Bulkhead](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.10%20PATTERN:%20PROTECT%20USING%20BULKHEAD.md)|[Visualize Dependency graph](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.15%20PATTERN:%20VISUALIZE%20DEPENDENCY%20GRAPH.md)
+[Containerize applications](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.4%20PATTERN:%20CONTAINERIZE%20APPLICATIONS.md)|[Implement Circuit breaker](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.11%20PATTERN:%20IMPLEMENT%20CIRCUIT%20BREAKER.md)|
+[Outsource Security of Micro services](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.5%20PATTERN:%20OUTSOURCE%20SECURITY%20OF%20MICRO%20SERVICES.md)|[Add Throttling Capabilitiy](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.12%20PATTERN:%20ADD%20THROTTLING%20CAPABILITIY.md)|
+[Externalize configuration](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.6%20PATTERN:%20EXTERNALIZE%20CONFIGURATION.md)||
+[Cache at all levels](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.7%20PATTERN:%20CACHE%20AT%20ALL%20LEVELS.md)||
 		
