--- a/Building-Modern-Cloud-Native-Apps/1. Abstract.md
+++ b/Building-Modern-Cloud-Native-Apps/1. Abstract.md
@@ -6,7 +6,7 @@ While an architect now has a big suite of ready-to-use cloud services to pick an
 
 ## Table of Contents
 [2. Introduction](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/2. Introduction.md)
-[3. Architecture Goals (Key Drivers)](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/3.%20Architecture%20Goals%20(Key%20Drivers).md)
-[4. Cloud Native Architecture (Key Principles)](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
+[3. Architecture Goals](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/3.%20Architecture%20Goals%20(Key%20Drivers).md)
+[4. Cloud Native Architecture](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
 
 
