--- a/Building-Modern-Cloud-Native-Apps/1. Abstract.md
+++ b/Building-Modern-Cloud-Native-Apps/1. Abstract.md
@@ -5,8 +5,8 @@ The intent of this guide is to serve as a handbook for architects who are in pro
 While an architect now has a big suite of ready-to-use cloud services to pick and choose from, it is difficult to understand the tradeoffs and handoffs between what cloud platforms will handle and what the application is expected to handle. Having an understanding of the core cloud native implementation patterns can give a good starting point for gauging the capabilities needed in choosing the right technology stack.  
 
 ## Table of Contents
-[2. Introduction](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/2. Introduction.md)
-[3. Architecture Goals](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/3.%20Architecture%20Goals%20(Key%20Drivers).md)
-[4. Cloud Native Architecture](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
+[Introduction](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/2. Introduction.md)
+[Architecture Goals](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/3.%20Architecture%20Goals%20(Key%20Drivers).md)
+[Cloud Native Architecture](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
 
 
