Update 4. Cloud Native Architecture (Key Principles).md

--- a/Building-Modern-Cloud-Native-Apps/4. Cloud Native Architecture (Key Principles).md
+++ b/Building-Modern-Cloud-Native-Apps/4. Cloud Native Architecture (Key Principles).md
@@ -1,3 +1,5 @@
+### Cloud Native Architecture (What are the Key Architecture Principles?) ###
+
 The definition of cloud-native has evolved a lot in the past few years. It has evolved from a specific definition of applications to software architecture to design patterns to even team, technology, and culture. It also has evolved from being cloud-based (distributed, less stateful) to strictly container based (stateless, distributed, self-healing, micro-services based) to the higher level of abstractions such as Serverless. According to the Cloud Native Computing Foundation’s (CNCF) definition, “cloud native” is a paradigm wherein organizations “build and run scalable applications in modern, dynamic environments such as public, private, and hybrid clouds” and is exemplified by tools such as “containers, service meshes, microservices, immutable infrastructure, and declarative APIs.”. The word ‘cloud-native’ may be a misnomer, it’s perfectly valid to have cloud-native architectures based on containers, service mesh even serverless deployed on on-prem data centers. Cloud-native is more of a mindset of how architecture should look like rather than the location in which it runs. 
 
 This document will focus on the architecture and design patterns that define “cloud-native”.  
