Update 3. Architecture Goals (Key Drivers).md

--- a/Building-Modern-Cloud-Native-Apps/3. Architecture Goals (Key Drivers).md
+++ b/Building-Modern-Cloud-Native-Apps/3. Architecture Goals (Key Drivers).md
@@ -1,3 +1,5 @@
+### Architecture Goals (What are the Key Drivers?) ###
+
 Following are some of the key architecture principles and goals that form the context in which the cloud native architectures need to be applied:
 
 ## Architectural goal - Highly robust platform
