--- a/Building-Modern-Cloud-Native-Apps/1. Abstract.md
+++ b/Building-Modern-Cloud-Native-Apps/1. Abstract.md
@@ -8,5 +8,6 @@ While an architect now has a big suite of ready-to-use cloud services to pick an
 - [Introduction](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/2.%20Introduction.md)
 - [Architecture Goals](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/3.%20Architecture%20Goals%20(Key%20Drivers).md)
 - [Cloud Native Architecture](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
+- [Cloud-Native Application Patterns](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
 
 
