Update 3. Architecture Goals (Key Drivers).md

--- a/Building-Modern-Cloud-Native-Apps/3. Architecture Goals (Key Drivers).md
+++ b/Building-Modern-Cloud-Native-Apps/3. Architecture Goals (Key Drivers).md
@@ -28,3 +28,5 @@ Following are some of the key architecture principles and goals that form the co
 
 ## Architectural goal – Security
 *	Secure – Architecture must be designed to prevent malicious activity, guard against accidental events and restrict access to authenticated users.
+
+[Next - Cloud native Architecture principles](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/4.%20Cloud%20Native%20Architecture%20(Key%20Principles).md)
