Update 4. Cloud Native Architecture (Key Principles).md

--- a/Building-Modern-Cloud-Native-Apps/4. Cloud Native Architecture (Key Principles).md
+++ b/Building-Modern-Cloud-Native-Apps/4. Cloud Native Architecture (Key Principles).md
@@ -19,3 +19,5 @@ Due to the complex nature of cloud deployments, cloud native applications are he
 
 ## Utilize Managed services:
 With increasing maturity in the cloud offerings, lately the industry has moved towards a higher utilization of managed services as compared to custom deployments or IaaS services which allows teams to focus on their product offerings while offloading the platform features to the experts.
+
+[Next - Cloud Native Application patterns](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
