Update 5.1	PATTERN: BUILD STATELESS APPLICATIONS.md

--- a/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.1	PATTERN: BUILD STATELESS APPLICATIONS.md
@@ -28,3 +28,5 @@ The new wave of applications are now leaning towards a “client heavy” UI wit
 *	It allows consistency across various applications.
 *	Statelessness makes an application more comfortable to work with and maintainable.
 (Insights, 2018)
+
+[Next - PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.2%20PATTERN:%20USE%20API%20GATEWAY%20FOR%20FRONT-END%20CHANNELS.md)
