Update 5.2 PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS.md

--- a/Building-Modern-Cloud-Native-Apps/5.2 PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.2 PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS.md
@@ -24,3 +24,5 @@ Choice of technology can be broadly classified into follows:
 2.	k8s-native Api gateway such as internal k8s Ingress controller or third party gateways such as Ambassador (https://www.getambassador.io/  ) or Gloo (https://github.com/solo-io/gloo ). These are optimized for k8s deployments but can also integrate with legacy apps and serverless functions such as AWS lambda, knative, Google functions etc. These could be used along with cloud vendor managed Api gateway where AWS Api gateway for e.g. can be used for exposing Apis to external apps which forwards traffic to internal gateway such as Gloo using path-based routing to k8s pods. 
 
 **Traditional API Management systems** –These are traditional or legacy offerings that are typically focused on providing Api mgmt. solutions for north-south traffic and are not generally optimized for micro services. They provide the entire gamut of features including security, developer portal, analytics, multi-cloud support, SaaS and on-prem options but come with associated cost and management effort if opted for the on-prem installation. There are many offerings in this space, most notably, Apigee, IBM Api Connect, 3Scale, WS02 among others. 
+
+[Next - PATTERN: LEVERAGE FUNCTION AS A SERVICE](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.3%20PATTERN:%20LEVERAGE%20FUNCTION%20AS%20A%20SERVICE.md)
