Update 5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md

--- a/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
+++ b/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
@@ -1,4 +1,4 @@
-## 4.1.5	PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES ##
+## PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES ##
 
 ### Rationale
 Modern applications are typically built as autonomous and independent micro services, potentially using different languages and deployment runtime. Due to this setup, there is no single point of control where requests can be authenticated. Also as services could be written in different languages, it is difficult to add uniformity and manage updates in the security implementation. A distributed architecture such as container clusters also ends up increasing the surface area for attacks due to differences in container runtime, base images, nodes etc. 
@@ -27,3 +27,5 @@ Another architectural choice is to delegate authentication to the side car but i
 
 Advantage of using service mesh is that cross-cutting concerns such as mTLS authentication, JWT validation and RBAC are delegated to the mesh before requests are forwarded to the applications. 
 (Zach Jory, Aspen Mesh, 2019)
+
+[Next - PATTERN: EXTERNALIZE CONFIGURATION](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.6%20PATTERN:%20EXTERNALIZE%20CONFIGURATION.md)
