Update 5.6 PATTERN: EXTERNALIZE CONFIGURATION.md

--- a/Building-Modern-Cloud-Native-Apps/5.6 PATTERN: EXTERNALIZE CONFIGURATION.md
+++ b/Building-Modern-Cloud-Native-Apps/5.6 PATTERN: EXTERNALIZE CONFIGURATION.md
@@ -14,3 +14,5 @@ To enable redundancy and location independence, application configurations must 
 *	Services deployed in AWS lambda can depend upon lambda environment variables to pass operational parameters to the functions. 
 *	Container technologies such as docker or containerd allow passing environment variables on startup. Deployed applications can then access these parameters passed as OS environment variables, property files or command line arguments. Most languages such as Go, Spring Boot provide support to access environment variables. Spring Boot specifically provides the spring cloud config module that can access and cache parameters from Http access to Git or file based configurations.
 *	While above solutions are application managed, a preferred and cloud native solution is to store configs in managed secret store provided by the cloud provider. AWS provides AWS Parameter Store and Secrets manager that are used to store configs including secrets with encryption using key management service. In addition, user and resource access can be controlled using appropriate IAM policies.
+
+[Next - PATTERN: CACHE AT ALL LEVELS](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.7%20PATTERN:%20CACHE%20AT%20ALL%20LEVELS.md)
