--- a/Building-Modern-Cloud-Native-Apps/5.7 PATTERN: CACHE AT ALL LEVELS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.7 PATTERN: CACHE AT ALL LEVELS.md
@@ -9,3 +9,4 @@ While caching has been an integral aspect of most traditional applications, a cl
 *	Use an in-memory, distributed caching service in the backend for offloading work from origin such as caching relatively static data from database, access tokens from identity provider etc. Most vendors provide support for Redis and memcached
 *	Enable in-memory cache at database level such as AWS DynamoDB Accelerator (AWS) that can deliver upto 10x performance improvement and latency in microseconds. DAX will take care of cache invalidation which needs to be managed by application in case you use a dedicated caching service such as Redis.
 
+[Next - PATTERN: RETRY ON FAILURE](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.8%20PATTERN:%20RETRY%20ON%20FAILURE.md)
