Update 5.10 PATTERN: PROTECT USING BULKHEAD.md

--- a/Building-Modern-Cloud-Native-Apps/5.10 PATTERN: PROTECT USING BULKHEAD.md
+++ b/Building-Modern-Cloud-Native-Apps/5.10 PATTERN: PROTECT USING BULKHEAD.md
@@ -16,3 +16,4 @@ Use this pattern to:
 *	Isolate critical consumers from standard consumers.
 *	Protect the application from cascading failures.
 
+[Next - PATTERN: IMPLEMENT CIRCUIT BREAKER](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.11%20PATTERN:%20IMPLEMENT%20CIRCUIT%20BREAKER.md)
