Update 5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md

--- a/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
+++ b/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
@@ -1,4 +1,4 @@
-### 4.2.4	PATTERN: IMPLEMENT CIRCUIT BREAKER ###
+### PATTERN: IMPLEMENT CIRCUIT BREAKER ###
 
 ## Rationale ##
 In a distributed environment, calls to remote resources and services can fail due to transient faults, such as slow network connections, timeouts, or the resources being overcommitted or temporarily unavailable. These faults typically correct themselves after a short period of time, and a robust cloud application should be prepared to handle them by using a strategy such as the Retry pattern.
