--- a/Building-Modern-Cloud-Native-Apps/5.13 PATTERN: CAPTURE ALL RELEVANT PERFORMANCE METRICS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.13 PATTERN: CAPTURE ALL RELEVANT PERFORMANCE METRICS.md
@@ -13,6 +13,4 @@ Metrics can be collected and reported in following ways:
 
 A combination of above methods should be used for complete end to end monitoring
 
-
-
-
+[Next - PATTERN: VISUALIZE DISTRIBUTED TRACING](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.14%20PATTERN:%20VISUALIZE%20DISTRIBUTED%20TRACING.md)
