Update 5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md

--- a/Building-Modern-Cloud-Native-Apps/5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md
+++ b/Building-Modern-Cloud-Native-Apps/5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md
@@ -15,3 +15,5 @@ There are following approaches to implement the solution:
 *	AWS X-ray and Azure Application Insights & Monitor provides a native approach 
 *	Spring Cloud Sleuth instruments Spring components to gather trace information and can deliver it to a Zipkin Server, which gathers and displays traces
 *	Jaeger is similar to Zipkin and can be used with Istio, integrating application traces with Envoy (service proxy) on k8s. 
+
+[Next - PATTERN: VISUALIZE DEPENDENCY GRAPH](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.15%20PATTERN:%20VISUALIZE%20DEPENDENCY%20GRAPH.md)
