--- a/Building-Modern-Cloud-Native-Apps/5.2 PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.2 PATTERN: USE API GATEWAY FOR FRONT-END CHANNELS.md
@@ -26,3 +26,5 @@ Choice of technology can be broadly classified into follows:
 **Traditional API Management systems** –These are traditional or legacy offerings that are typically focused on providing Api mgmt. solutions for north-south traffic and are not generally optimized for micro services. They provide the entire gamut of features including security, developer portal, analytics, multi-cloud support, SaaS and on-prem options but come with associated cost and management effort if opted for the on-prem installation. There are many offerings in this space, most notably, Apigee, IBM Api Connect, 3Scale, WS02 among others. 
 
 [Next - PATTERN: LEVERAGE FUNCTION AS A SERVICE](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.3%20PATTERN:%20LEVERAGE%20FUNCTION%20AS%20A%20SERVICE.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
