Update 5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md

--- a/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
+++ b/Building-Modern-Cloud-Native-Apps/5.3 PATTERN: LEVERAGE FUNCTION AS A SERVICE.md
@@ -45,3 +45,5 @@ Most of the current popular FaaS offerings are proprietary implementations. Knat
 Additionally, one of the earlier challenges was that vendor managed services such as FaaS could not be replicated in local environment easily and required application deployment thru CLI or console for unit testing and verification. In AWS, there are alternatives such as the vendor provided SAM Local (https://github.com/awslabs/aws-sam-cli) and open source localstack (https://github.com/localstack/localstack) that promises to provide a test/mocking framework with support for more than 20 AWS managed services.
 
 [Next - PATTERN: CONTAINERIZE APPLICATIONS](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.4%20PATTERN:%20CONTAINERIZE%20APPLICATIONS.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
