Update 5.4 PATTERN: CONTAINERIZE APPLICATIONS.md

--- a/Building-Modern-Cloud-Native-Apps/5.4 PATTERN: CONTAINERIZE APPLICATIONS.md
+++ b/Building-Modern-Cloud-Native-Apps/5.4 PATTERN: CONTAINERIZE APPLICATIONS.md
@@ -21,3 +21,5 @@ k8s is the accepted winner in this space after much competition with Mesos and D
 One of the early questions to answer is how to implement cross-cutting concerns such as service discovery, service-to-service and origin-to-service security, observability (including telemetry and distributed tracing), rolling releases and resiliency. This is implemented using a class of technologies called as Service mesh. Service mesh is an approach to operating a secure, fast and reliable microservices ecosystem. It has been an important stepping stone in making it easier to adopt microservices at scale. It offers discovery, security, tracing, monitoring and failure handling. Examples of service mesh platforms in open source are Istio and linkerd. In native offerings, AWS has released App Mesh service in public preview, Azure provides the Azure Fabric Mesh service in its proprietary micro services framework called Service Fabric and GCP provides integration between k8s and Istio.
 
 [Next - PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.5%20PATTERN:%20OUTSOURCE%20SECURITY%20OF%20MICRO%20SERVICES.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
