--- a/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
+++ b/Building-Modern-Cloud-Native-Apps/5.5 PATTERN: OUTSOURCE SECURITY OF MICRO SERVICES.md
@@ -29,3 +29,5 @@ Advantage of using service mesh is that cross-cutting concerns such as mTLS auth
 (Zach Jory, Aspen Mesh, 2019)
 
 [Next - PATTERN: EXTERNALIZE CONFIGURATION](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.6%20PATTERN:%20EXTERNALIZE%20CONFIGURATION.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
