Update 5.6 PATTERN: EXTERNALIZE CONFIGURATION.md

--- a/Building-Modern-Cloud-Native-Apps/5.6 PATTERN: EXTERNALIZE CONFIGURATION.md
+++ b/Building-Modern-Cloud-Native-Apps/5.6 PATTERN: EXTERNALIZE CONFIGURATION.md
@@ -16,3 +16,5 @@ To enable redundancy and location independence, application configurations must 
 *	While above solutions are application managed, a preferred and cloud native solution is to store configs in managed secret store provided by the cloud provider. AWS provides AWS Parameter Store and Secrets manager that are used to store configs including secrets with encryption using key management service. In addition, user and resource access can be controlled using appropriate IAM policies.
 
 [Next - PATTERN: CACHE AT ALL LEVELS](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.7%20PATTERN:%20CACHE%20AT%20ALL%20LEVELS.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
