Update 5.15 PATTERN: VISUALIZE DEPENDENCY GRAPH.md

--- a/Building-Modern-Cloud-Native-Apps/5.15 PATTERN: VISUALIZE DEPENDENCY GRAPH.md
+++ b/Building-Modern-Cloud-Native-Apps/5.15 PATTERN: VISUALIZE DEPENDENCY GRAPH.md
@@ -14,3 +14,5 @@ Create a visual model that helps teams to answer following questions:
 AWS X-Ray and Azure Application Insights provide a native approach to visualizing service graphs
 
 For applications deployed in container clusters, using service mesh such as Istio will allow visualizing graphs using health monitoring solution called kiali. (https://www.kiali.io/documentation/distributed-tracing/ )
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
