Update 5.8 PATTERN: RETRY ON FAILURE.md

--- a/Building-Modern-Cloud-Native-Apps/5.8 PATTERN: RETRY ON FAILURE.md
+++ b/Building-Modern-Cloud-Native-Apps/5.8 PATTERN: RETRY ON FAILURE.md
@@ -20,3 +20,5 @@ There is significant library support for implementing exponential backoff such a
 For applications deployed in container clusters, using service mesh such as Istio or AWS App Mesh provides declarative retry capabilities. Advantage is that this puts more of the resilience implementation into the infrastructure so that applications can contain pure business logic.
 
 [Next - PATTERN: DESIGN FOR IDEMPOTENCY](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.9%20PATTERN:%20DESIGN%20FOR%20IDEMPOTENCY.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
