Update 5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md

--- a/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
+++ b/Building-Modern-Cloud-Native-Apps/5.11 PATTERN: IMPLEMENT CIRCUIT BREAKER.md
@@ -15,3 +15,5 @@ Use application frameworks such as Netflix Hystrix for implementing the circuit 
 For applications deployed in container clusters, using service mesh such as Istio or AWS App Mesh provides declarative circuit breaker capabilities. Advantage is that this puts more of the resilience implementation into the infrastructure so that applications can contain pure business logic.
 
 [Next - PATTERN: ADD THROTTLING CAPABILITIY](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.12%20PATTERN:%20ADD%20THROTTLING%20CAPABILITIY.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
