Update 5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md

--- a/Building-Modern-Cloud-Native-Apps/5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md
+++ b/Building-Modern-Cloud-Native-Apps/5.14 PATTERN: VISUALIZE DISTRIBUTED TRACING.md
@@ -17,3 +17,5 @@ There are following approaches to implement the solution:
 *	Jaeger is similar to Zipkin and can be used with Istio, integrating application traces with Envoy (service proxy) on k8s. 
 
 [Next - PATTERN: VISUALIZE DEPENDENCY GRAPH](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.15%20PATTERN:%20VISUALIZE%20DEPENDENCY%20GRAPH.md)
+
+[Back to Pattern catalog](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/5.%20Cloud-Native%20Application%20Patterns.md)
