--- a/Building-Modern-Cloud-Native-Apps/6. Conclusion.md
+++ b/Building-Modern-Cloud-Native-Apps/6. Conclusion.md
@@ -3,3 +3,5 @@
 *	While an architect now has a big suite of ready-to-use cloud services to pick and choose from, it is difficult to understand the tradeoffs and handoffs between what cloud platforms will handle and what the application is expected to handle. Having an understanding of the core cloud native implementation patterns can give a good starting point for gauging the capabilities needed in choosing the right technology stack.  
 *	There is a substantial gap between delivery of “traditional” architectures as compared to cloud-native architectures especially in difficulty in understanding the ‘big’ picture, understanding differences between what the cloud provider will handle and you need to handle, the breadth of knowledge required and pace of execution. The major change for an architect is the need to understand the aspects outside of the application domain such as infrastructure, data and security.
 *	Finally, it is important to understand that moving to a cloud-native architecture that implements most of the patterns described here should be considered a marathon and not a sprint. This is not only due to the complexity involved but also due to the fact that all cloud vendors are constantly refining their offerings that continually enhance the capabilities of the platform allowing teams to offload much of the heavy lifting to the platform.
+
+[Back to Home](https://github.com/srikanthkotekar/ideasworthsharing/blob/master/Building-Modern-Cloud-Native-Apps/1.%20Abstract.md)
