--- a/Building-Modern-Cloud-Native-Apps/2. Introduction.md
+++ b/Building-Modern-Cloud-Native-Apps/2. Introduction.md
@@ -1,5 +1,5 @@
 ### Introduction
-This whitepaper is an attempt to assist the architect and developer community who are coming from a “traditional” deployment setup (data center deployment, 3-tier, monolithic, single stack etc.) and now want to build modern applications that can scale on demand, remain resilient under duress and ultimately enable business to achieve their goals. In recent years, there is now general agreement on the typical characteristics of such architectures. Most of them will be deployed in a public or private cloud, heavily leverage cloud-native or open-source technologies and have significantly accelerated development lifecycles. To enable these, applications need to be built from ground up to effectively leverage and compensate for the cloud platform aka the Cloud native architecture. 
+This document is an attempt to assist the architect and developer community who are coming from a “traditional” deployment setup (data center deployment, 3-tier, monolithic, single stack etc.) and now want to build modern applications that can scale on demand, remain resilient under duress and ultimately enable business to achieve their goals. In recent years, there is now general agreement on the typical characteristics of such architectures. Most of them will be deployed in a public or private cloud, heavily leverage cloud-native or open-source technologies and have significantly accelerated development lifecycles. To enable these, applications need to be built from ground up to effectively leverage and compensate for the cloud platform aka the Cloud native architecture. 
 For an architect who has a background in building more “traditional” applications, these modern architectures pose a substantial challenge. Some of the key reasons are listed below:
 
 * Traditionally, the role of an architect was confined to application architecture, while the platform deployment was the responsibility of separate dedicated teams. The new way of working has been the transition from the “application” mode to “product” mode where a single lean team is responsible for building, running, fixing and securing the product. Additionally, with the transition to cloud technology, much of the “infrastructure” concerns that was earlier the domain of infra teams have fallen under the ambit of an architect.
